// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root MST model adds track and connection configs to a dataset 1`] = `
Object {
  "assembly": Object {
    "aliases": Array [
      "assemblyA",
    ],
    "configId": Any<String>,
    "name": "assembly1",
  },
  "configId": Any<String>,
  "name": "dataset1",
}
`;

exports[`Root MST model adds track and connection configs to a dataset 2`] = `
Object {
  "adapter": Object {
    "configId": Any<String>,
    "index": Object {
      "configId": Any<String>,
    },
    "type": "BamAdapter",
  },
  "configId": Any<String>,
  "renderer": Object {
    "configId": Any<String>,
    "type": "PileupRenderer",
  },
  "type": "BasicTrack",
}
`;

exports[`Root MST model adds track and connection configs to a dataset 3`] = `
Object {
  "configId": Any<String>,
  "type": "JBrowse1Connection",
}
`;

exports[`Root MST model creates with defaults 1`] = `
Object {
  "configId": Any<String>,
  "rpc": Object {
    "configId": Any<String>,
    "defaultDriver": "MainThreadRpcDriver",
  },
}
`;
